{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 224,
  "lineage": "7f1a7cb9-20ba-a7d7-a2be-0bccacec8883",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kartik_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:533266978173:internet-gateway/igw-09c4cfc3c68a8ed0d",
            "id": "igw-09c4cfc3c68a8ed0d",
            "owner_id": "533266978173",
            "vpc_id": "vpc-0aad83958e5717d4d"
          },
          "dependencies": [
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "strapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:loadbalancer/app/strapi-alb/f56edaaa35e3fe7f",
            "arn_suffix": "app/strapi-alb/f56edaaa35e3fe7f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-alb-1503157740.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:loadbalancer/app/strapi-alb/f56edaaa35e3fe7f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e1be1a384ff41e4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02704e9eef024f667"
              },
              {
                "subnet_id": "subnet-04b0d99f2e123a27c"
              }
            ],
            "subnets": [
              "subnet-02704e9eef024f667",
              "subnet-04b0d99f2e123a27c"
            ],
            "vpc_id": "vpc-0aad83958e5717d4d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.Alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:listener/app/strapi-alb/f56edaaa35e3fe7f/93013147f3a6699e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:targetgroup/strapi-targets/9f41fb1817af1487",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:listener/app/strapi-alb/f56edaaa35e3fe7f/93013147f3a6699e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:loadbalancer/app/strapi-alb/f56edaaa35e3fe7f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.strapi",
            "aws_lb_target_group.strapi",
            "aws_security_group.Alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "strapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:targetgroup/strapi-targets/9f41fb1817af1487",
            "arn_suffix": "targetgroup/strapi-targets/9f41fb1817af1487",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:533266978173:targetgroup/strapi-targets/9f41fb1817af1487",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-targets",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0aad83958e5717d4d"
          },
          "dependencies": [
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:533266978173:route-table/rtb-08f109bf4e7f8bfc6",
            "id": "rtb-08f109bf4e7f8bfc6",
            "owner_id": "533266978173",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c4cfc3c68a8ed0d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aad83958e5717d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kartik_gateway",
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c999d51a8c485890",
            "route_table_id": "rtb-08f109bf4e7f8bfc6",
            "subnet_id": "subnet-02704e9eef024f667"
          },
          "dependencies": [
            "aws_internet_gateway.kartik_gateway",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:533266978173:security-group/sg-08e1be1a384ff41e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e1be1a384ff41e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Alb_sg",
            "name_prefix": "",
            "owner_id": "533266978173",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aad83958e5717d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kartik_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:533266978173:security-group/sg-00e83555687315b89",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e83555687315b89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kartik_sg",
            "name_prefix": "",
            "owner_id": "533266978173",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aad83958e5717d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:533266978173:subnet/subnet-02704e9eef024f667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02704e9eef024f667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266978173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aad83958e5717d4d"
          },
          "dependencies": [
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:533266978173:subnet/subnet-04b0d99f2e123a27c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b0d99f2e123a27c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266978173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aad83958e5717d4d"
          },
          "dependencies": [
            "aws_vpc.kartik_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kartik_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:533266978173:vpc/vpc-0aad83958e5717d4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05305271421a372fd",
            "default_route_table_id": "rtb-064ee62f1dab79a23",
            "default_security_group_id": "sg-07dac35ef1ac74abb",
            "dhcp_options_id": "dopt-08e45421c4e617177",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aad83958e5717d4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064ee62f1dab79a23",
            "owner_id": "533266978173"
          }
        }
      ]
    }
  ]
}